--- a/ml/lesson-3/solution.ipynb
+++ b/ml/lesson-3/solution.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "13e3df75",
+   "metadata": {},
+   "source": [
+    "## Solution for homework 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9072fd2",
+   "metadata": {},
+   "source": [
+    "import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a5495ee5",
@@ -26,6 +42,14 @@
     "print(df.head())\n",
     "print(df.info())\n",
     "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f0b8572",
+   "metadata": {},
+   "source": [
+    "plot data"
    ]
   },
   {
